--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "axios": "^1.7.7",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
@@ -27,6 +28,6 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "react-router-dom": "^6.28.0",
-    "vite": "^5.4.10"
+    "vite": "^6.3.5"
   }
 }
