--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "dompurify": "^3.3.0",
     "phosphor-react": "^1.4.1",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-quill": "^2.0.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
